# wave_propagation_cellular_automata

./: README.md  pyproject.toml
wave/: config.py  main.py  plot.py  simulation.py
