[tool.poetry]
name = "wave"
version = "0.1.0"
description = ""
authors = ["Hericles Ferraz <hericles.ferraz@inspira.legal>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
pyqt5 = "^5.15.11"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
